# grafana-integration

./: README.md  catalog-info.yaml  commands.sh  dockerfile  env.grafana  grafana.ini  nginx.conf.template  package-lock.json  pyproject.toml  start.sh
.github/workflows/: deploy.yml
app/: main.py
backstage/: api.yaml  template-dashboards.yaml
backstage/skeleton/: catalog-info.yaml.njk
mapdevs-fileuploader-app/: go.mod  go.sum  package-lock.json  package.json
mapdevs-fileuploader-app/.config/: docker-compose-base.yaml
mapdevs-fileuploader-app/.github/workflows/: ci.yml
mapdevs-fileuploader-app/provisioning/plugins/: apps.yaml
mapdevs-fileuploader-app/src/: README.md  module.tsx  plugin.json
mapdevs-fileuploader-app/src/backend/: main.go
mapdevs-fileuploader-app/src/components/App/: App.tsx
provisioning/dashboards/: dashboard.yml  finances-dashboard-ext.json  finances-dashboard.json
provisioning/datasources/: postgres.yaml  sqlite.yml
provisioning/plugins/: file-uploader.yml
