[project]
name = "grafana-integration"
version = "0.1.0"
description = "FastAPI service that lets Grafana containers receive SQLite databases."
authors = [{ name = "Mario", email = "marioapgs@gmail.com" }]
readme = "README.md"
requires-python = "~=3.12"

dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.29.0",
  "aiofiles>=23.2.1",
  "python-multipart",
  "httpx>=0.27"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 79
target-version = "py312"
lint.select = [
    "A",   # flake8-builtins
    "B",   # flake8-bugbear
    "C4",
    "E",   # pycodestyle - errors
    "F",   # pyflakes
    "I",   # isort
    "RUF", # ruff specific rules
    "S",   # flake8-bandit
    "UP",  # pyupgrade
    "W",   # pycodestyle - warnings
]
lint.ignore = ["S603", "S501", "S101", "E501"]


[tool.ruff.isort]
known-first-party = ["app"]